--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ header.sticky{
 
 /* owner */
 .owner-tatya{
-    background-color: #FFD1D1;
+    background-color: #cfb6ac;
 }
 .owner{
     text-align: center;
@@ -232,16 +232,46 @@ header.sticky{
 .form1{
     font-family: monospace;
     text-align: left;
-    margin-top: 3px;
+    margin-top: 60px;
 }
 .form2{
     font-family: monospace;
     text-align: left;
     margin-bottom: 3px;
+    margin-top: 3px;
 }
 .button2{
     margin-top: 15px;
 }
+.end-text{
+    background-color: #cfb6ac;
+    text-align: center;
+    padding: 20px;
+}
+.end-text p{
+    color: #000;
+    text-transform: capitalize;
+}
+.logo2 img{
+    margin-top: 90px;
+    width: 160px;
+    height: auto;
+    align-items: center;
+}
+.contact2 p{
+    align-items: center;
+    color: #000;
+    font-size: small;
+}
+.social i{
+    color: #000;
+    font-size: 20px;
+    transition: all .42s;
+}
+.social i:hover{
+    transform: scale(1.3);
+}
+
 /* responsive */
 @media(max-width:890px){
     header{
@@ -286,4 +316,3 @@ header.sticky{
         right: 0;
     }
 }
-
